--- a/scss/components/_body-nosotros.scss
+++ b/scss/components/_body-nosotros.scss
@@ -1,38 +1,17 @@
 $font-family: 'Open Sans', sans-serif;
 
 
-
-.nosotros-info{
-    max-width: 85%;
-}
-  
-.thumbnail {
-    position: relative;
-    display: flex;
-    justify-content: center;
-
-}
+.box{
+    position:relative;
+  }
 
 
-
-.caption {
+.img-title{
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate( -50%, -50% );
+    color: black;
     text-align: center;
-    color: white;
-    font-weight: bold;
-}
-
-.nosotros-texto{
-    font-family: $font-family;
-    font-size:2vw;
-    max-width: 600px;
-
-}
-
-
-.contacto-texto{
-    font-family: 'Courier New', Courier, monospace;
-}
+    left: 0;
+    right: 0;
+    top: 40%;
+    letter-spacing: 3px;
+  }
